--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,13 +14,14 @@
     "incremental": true,
     "plugins": [
       {
-        "name": "next"
+        "name": "next",
+        
       }
     ],
     "paths": {
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/components/ContactUs/Contact.jsx"],
   "exclude": ["node_modules"]
 }
